--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -85,17 +85,17 @@ h1, h2, h3, h4, h5, h6 {
   .btn.btn-primary {
     color: #fff; }
     .btn.btn-primary:hover, .btn.btn-primary:focus, .btn.btn-primary:active {
-      border-color: #bd1220 !important;
-      color: #bd1220 !important;
+      border-color: #f3ad19 !important;
+      color: #f3ad19 !important;
       background-color: transparent !important; }
   .btn.btn-outline-primary {
-    color: #bd1220;
-    border-color: #bd1220 !important;
+    color: #f3ad19;
+    border-color: #f3ad19 !important;
     background-color: transparent !important; }
     .btn.btn-outline-primary:hover, .btn.btn-outline-primary:focus, .btn.btn-outline-primary:active {
-      border-color: #bd1220 !important;
+      border-color: #f3ad19 !important;
       color: #fff !important;
-      background-color: #bd1220 !important; }
+      background-color: #f3ad19 !important; }
   .btn.btn-md {
     padding: 14px 30px; }
 
@@ -108,7 +108,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 0;
   border: 1px solid #f6f6f6; }
   .form-control:active, .form-control:focus {
-    border-color: #bd1220; }
+    border-color: #f3ad19; }
   .form-control:hover, .form-control:active, .form-control:focus {
     -webkit-box-shadow: none !important;
     box-shadow: none !important; }
@@ -132,7 +132,7 @@ h1, h2, h3, h4, h5, h6 {
     position: absolute;
     width: 40px;
     height: 2px;
-    background: #bd1220; }
+    background: #f3ad19; }
   .site-section-heading.text-center:before {
     content: "";
     left: 50%;
@@ -143,7 +143,7 @@ h1, h2, h3, h4, h5, h6 {
     position: absolute;
     width: 40px;
     height: 2px;
-    background: #bd1220; }
+    background: #f3ad19; }
 
 .border-top {
   border-top: 1px solid #ced4da !important; }
@@ -192,7 +192,8 @@ h1, h2, h3, h4, h5, h6 {
   .bg-image.overlay:before {
     background: rgba(0, 0, 0, 0.4); }
   .bg-image.overlay-primary:before {
-    background: rgba(189, 18, 32, 0.9); }
+    background: rgba(255, 193, 7, 0.9); }
+    /* background: rgba(189, 18, 32, 0.9); } */
   .bg-image.overlay-info:before {
     background: rgba(47, 240, 193, 0.9); }
   .bg-image.overlay-success:before {
@@ -306,7 +307,7 @@ h1, h2, h3, h4, h5, h6 {
           transition: 0s all;
           color: #343a40; }
           .site-navbar .site-navigation .site-menu .has-children .dropdown a.active {
-            color: #bd1220; }
+            color: #f3ad19; }
         .site-navbar .site-navigation .site-menu .has-children .dropdown .active > a {
           color: #fff !important; }
         .site-navbar .site-navigation .site-menu .has-children .dropdown > li {
@@ -416,12 +417,12 @@ h1, h2, h3, h4, h5, h6 {
       position: relative;
       color: #212529; }
       .site-mobile-menu .site-nav-wrap a.active, .site-mobile-menu .site-nav-wrap a:hover {
-        color: #bd1220; }
+        color: #f3ad19; }
     .site-mobile-menu .site-nav-wrap li {
       position: relative;
       display: block; }
       .site-mobile-menu .site-nav-wrap li.active > a {
-        color: #bd1220; }
+        color: #f3ad19; }
     .site-mobile-menu .site-nav-wrap .arrow-collapse {
       position: absolute;
       right: 0px;
@@ -616,7 +617,7 @@ h1, h2, h3, h4, h5, h6 {
     text-align: center;
     line-height: 50px;
     border-radius: 50%;
-    background: #bd1220;
+    background: #f3ad19;
     color: #fff;
     margin-bottom: 10px;
     font-size: 1.3rem; }
@@ -635,7 +636,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 30px;
   background: #fff;
   border: 1px solid #eee;
-  border-top: 2px solid #bd1220;
+  border-top: 2px solid #f3ad19;
   -webkit-transition: .3s all ease-in-out;
   -o-transition: .3s all ease-in-out;
   transition: .3s all ease-in-out;
@@ -645,7 +646,7 @@ h1, h2, h3, h4, h5, h6 {
     -webkit-box-shadow: 0 10px 30px -10px rgba(0, 0, 0, 0.4);
     box-shadow: 0 10px 30px -10px rgba(0, 0, 0, 0.4);
     border: 1px solid transparent;
-    border-top: 2px solid #bd1220;
+    border-top: 2px solid #f3ad19;
     top: -2px; }
   .service *:last-child {
     margin-bottom: 0; }
@@ -710,7 +711,7 @@ h1, h2, h3, h4, h5, h6 {
   .ul-check.success li:before {
     color: #28a745; }
   .ul-check.primary li:before {
-    color: #bd1220; }
+    color: #f3ad19; }
 
 .item {
   border: none;
